results/SVCOMP/conversational/log-ExSymExeI2F-2024_03_12_19_36_53.txt
class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result <==> true;
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires x >= Integer.MIN_VALUE && x <= Integer.MAX_VALUE;
  //@ ensures \result <==> res > 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:14: error: cannot find symbol
  //@ ensures \result <==> res > 0;
                           ^
  symbol:   variable res
  location: class Main
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result <==> true;
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires x >= Integer.MIN_VALUE && x <= Integer.MAX_VALUE;
  //@ ensures \result <==> \result > 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:14: error: bad operand types for binary operator '>'
  //@ ensures \result <==> \result > 0;
                                   ^
  first type:  boolean
  second type: int
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result <==> true;
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires x >= Integer.MIN_VALUE && x <= Integer.MAX_VALUE;
  //@ ensures \result <==> res > 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:14: error: cannot find symbol
  //@ ensures \result <==> res > 0;
                           ^
  symbol:   variable res
  location: class Main
1 error

class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result <==> true;
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires x >= Integer.MIN_VALUE && x <= Integer.MAX_VALUE;
  //@ ensures \result <==> x + 1 > 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}

